--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">118,168</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.mobiletests.com.LogInMobileTest</td><td><a href="#m0">BatteryChargeTest</a></td><td rowspan="1">1677057276094</td><td rowspan="1">42</td></tr><tr class="passedeven"><td><a href="#m1">SwitchOnWifi</a></td><td rowspan="1">1677057301901</td><td rowspan="1">32097</td></tr><tr class="passedeven"><td><a href="#m2">SystemTime</a></td><td rowspan="1">1677057354113</td><td rowspan="1">678</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">InterviewPrep.DataProviderDemo</td><td><a href="#m0">Test</a></td><td rowspan="3">1678179466466</td><td rowspan="3">0</td></tr><tr class="passedeven"><td><a href="#m1">Test</a></td></tr><tr class="passedeven"><td><a href="#m2">Test</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.mobiletests.com.LogInMobileTest#BatteryChargeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.mobiletests.com.LogInMobileTest#SwitchOnWifi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.mobiletests.com.LogInMobileTest#SystemTime</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">InterviewPrep.DataProviderDemo#Test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>2134234.0</td><td>234234.0</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">InterviewPrep.DataProviderDemo#Test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>2134234.0</td><td>234234.0</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">InterviewPrep.DataProviderDemo#Test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>2134234.0</td><td>234234.0</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
