--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sanjay.adaki\AppData\Local\Temp\testng-eclipse--125884581\testng-customsuite.xml</span>
+                    <span>C:\Users\sanjay.adaki\AppData\Local\Temp\testng-eclipse--1293087228\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,17 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.mobiletests.com.LogInMobileTest" class="method navigator-link" hash-for-method="BatteryChargeTest">BatteryChargeTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="InterviewPrep.DataProviderDemo" class="method navigator-link" hash-for-method="Test(2134234.0, 234234.0)">Test(2134234.0, 234234.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.mobiletests.com.LogInMobileTest" class="method navigator-link" hash-for-method="SwitchOnWifi">SwitchOnWifi</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="InterviewPrep.DataProviderDemo" class="method navigator-link" hash-for-method="Test(2134234.0, 234234.0)">Test(2134234.0, 234234.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.mobiletests.com.LogInMobileTest" class="method navigator-link" hash-for-method="SystemTime">SystemTime</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="InterviewPrep.DataProviderDemo" class="method navigator-link" hash-for-method="Test(2134234.0, 234234.0)">Test(2134234.0, 234234.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +132,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.mobiletests.com.LogInMobileTest</span>
+              <span class="class-name">InterviewPrep.DataProviderDemo</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="BatteryChargeTest">
-                  </a> <!-- BatteryChargeTest -->
-                  <span class="method-name">BatteryChargeTest</span>
+                  <a name="Test(2134234.0, 234234.0)">
+                  </a> <!-- Test(2134234.0, 234234.0) -->
+                  <span class="method-name">Test</span>
+                  <span class="parameters">(2134234.0, 234234.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="SwitchOnWifi">
-                  </a> <!-- SwitchOnWifi -->
-                  <span class="method-name">SwitchOnWifi</span>
+                  <a name="Test(2134234.0, 234234.0)">
+                  </a> <!-- Test(2134234.0, 234234.0) -->
+                  <span class="method-name">Test</span>
+                  <span class="parameters">(2134234.0, 234234.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="SystemTime">
-                  </a> <!-- SystemTime -->
-                  <span class="method-name">SystemTime</span>
+                  <a name="Test(2134234.0, 234234.0)">
+                  </a> <!-- Test(2134234.0, 234234.0) -->
+                  <span class="method-name">Test</span>
+                  <span class="parameters">(2134234.0, 234234.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +164,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sanjay.adaki\AppData\Local\Temp\testng-eclipse--125884581\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sanjay.adaki\AppData\Local\Temp\testng-eclipse--1293087228\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +173,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.mobiletests.com.LogInMobileTest&quot;/&gt;
+      &lt;class name=&quot;InterviewPrep.DataProviderDemo&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,22 +215,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'SwitchOnWifi')
-data.setCell(0, 2, 'com.mobiletests.com.LogInMobileTest')
-data.setCell(0, 3, 32097);
+data.setCell(0, 1, 'Test')
+data.setCell(0, 2, 'InterviewPrep.DataProviderDemo')
+data.setCell(0, 3, 6);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'SystemTime')
-data.setCell(1, 2, 'com.mobiletests.com.LogInMobileTest')
-data.setCell(1, 3, 678);
+data.setCell(1, 1, 'Test')
+data.setCell(1, 2, 'InterviewPrep.DataProviderDemo')
+data.setCell(1, 3, 1);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'BatteryChargeTest')
-data.setCell(2, 2, 'com.mobiletests.com.LogInMobileTest')
-data.setCell(2, 3, 42);
+data.setCell(2, 1, 'Test')
+data.setCell(2, 2, 'InterviewPrep.DataProviderDemo')
+data.setCell(2, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 7 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,43 +256,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.mobiletests.com.LogInMobileTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">InterviewPrep.DataProviderDemo</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Test(2134234.0, 234234.0)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">BatteryChargeTest</span>
-                <span class="method-start">38079 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">38123 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">39358 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">SwitchOnWifi</span>
-                <span class="method-start">63886 ms</span>
+                <span class="method-name">Test(2134234.0, 234234.0)</span>
+                <span class="method-start">10 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">95983 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">97382 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">SystemTime</span>
-                <span class="method-start">116098 ms</span>
+                <span class="method-name">Test(2134234.0, 234234.0)</span>
+                <span class="method-start">13 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">116777 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
